--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 								Item Name
 							</div>
 							<div class="cell">
-								Price Diff(%)
+								Profit percent
 							</div>
 							<div class="cell">
-								Price Diff
+								Profit per
 							</div>
 							<div class="cell">
 								Purchases/week
